--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <!--<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>-->
+    <script src="node_modules/firebase/lib/firebase-web.js`"></script>
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
