--- a/public/index-idea.html
+++ b/public/index-idea.html
@@ -13,7 +13,8 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <script src=”node_modules/underscore/underscore.js”></script>
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
