added custom router for auto redirect styled the whole app

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <base href="/">
-    <title>Angular 2 QuickStart</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Angular 2 QuickStart</title>
+
+    <base href="/">
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Polyfill(s) for older browsers -->
@@ -14,7 +18,8 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
     <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.js"></script>
-
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
@@ -33,7 +38,8 @@
                 "@angular/http": {main: 'http.umd.js', defaultExtension: 'js'},
                 "@angular/platform-browser": {main: 'platform-browser.umd.js', defaultExtension: 'js'},
                 "@angular/platform-browser-dynamic": {main: 'platform-browser-dynamic.umd.js', defaultExtension: 'js'},
-                "@angular/router": {main: 'router.umd.js', defaultExtension: 'js'}
+                "@angular/router": {main: 'router.umd.js', defaultExtension: 'js'},
+                "@angular/router-deprecated": {main: 'router-deprecated.umd.js', defaultExtension: 'js'}
             },
             map: {
                 "@angular/common": './node_modules/@angular/common',
@@ -43,6 +49,7 @@
                 "@angular/platform-browser": './node_modules/@angular/platform-browser',
                 "@angular/platform-browser-dynamic": './node_modules/@angular/platform-browser-dynamic',
                 "@angular/router": './node_modules/@angular/router',
+                "@angular/router-deprecated": './node_modules/@angular/router-deprecated',
                 moment: './node_modules/moment/moment.js',
                 "@angular/core/src/facade/lang": "./node_modules/@angular/core/src/facade/lang.js",
                 underscore: './node_modules/underscore/underscore.js'
