--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.js"></script>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
@@ -39,7 +40,8 @@
                 "@angular/platform-browser": {main: 'platform-browser.umd.js', defaultExtension: 'js'},
                 "@angular/platform-browser-dynamic": {main: 'platform-browser-dynamic.umd.js', defaultExtension: 'js'},
                 "@angular/router": {main: 'router.umd.js', defaultExtension: 'js'},
-                "@angular/router-deprecated": {main: 'router-deprecated.umd.js', defaultExtension: 'js'}
+                "@angular/router-deprecated": {main: 'router-deprecated.umd.js', defaultExtension: 'js'},
+                'angular2-highcharts': {main: 'index', format: 'cjs', defaultExtension: 'js'}
             },
             map: {
                 "@angular/common": './node_modules/@angular/common',
@@ -52,7 +54,9 @@
                 "@angular/router-deprecated": './node_modules/@angular/router-deprecated',
                 moment: './node_modules/moment/moment.js',
                 "@angular/core/src/facade/lang": "./node_modules/@angular/core/src/facade/lang.js",
-                underscore: './node_modules/underscore/underscore.js'
+                underscore: './node_modules/underscore/underscore.js',
+                'angular2-highcharts': './node_modules/angular2-highcharts/dist',
+                'highcharts/highstock.src': './node_modules/highcharts/highstock.js'
             }
         });
         System.import('js/main')
