--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <h1>Hello World! Here's something new!</h1>
+  <h1>Hello World! Here's something new! And something even newer!</h1>
 </body>
 </html>
