--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Angular QuickStart</title>
+  <title>Expense manager v0.2</title>
   <base href="/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
