Added capability to add categories in-line, ability to edit categories

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
 <!-- 3. Display the application -->
 <body>
 <my-app>Loading...</my-app>
+<script type="text/javascript">
+    // temporary hack for enable bootstrap 4
+    window.__theme = 'bs4';
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
         integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7"
         crossorigin="anonymous"></script>
